2012-04-21  Steven Munroe  <sjmunroe@us.ibm.com>

	* doc/libshpde-doxygen-sph.doxy: Remove sasstringbtreenode.h.
	* doc/sphmaindox.h: Improve description of sphtimer.h and
	sphthread.h.
	* src/sascompoundheap.h: Add todo.
	* src/sasindex.cpp: Replace sasindex.h with sasindexpriv.h.
	* src/sasindex.h: Add todo. Remove externs for; SASIndexAlloc,
	SASIndexFree, SASIndexNearAlloc, SASIndexNearDealloc,
	SASIndexGetRootNode.
	* src/sasindexpriv.h: Fix includes, Fix field refs to structs.
	Add extern for; SASIndexAlloc, SASIndexFree, SASIndexNearAlloc,
	SASIndexNearDealloc, SASIndexGetRootNode.
	* src/saslock.h: Add todo.
	* src/sassim.h: Add todo.
	* src/sasstringbtree.h: Remove todo, add another.
	* src/sasstringbtreenode.h: Change note to warning.
	* src/sasstringbtreepriv.h: Fix includes, Fix field refs to structs.
	* src/sphcontext.cpp: Replace sphcontext.h with sphcontextpriv.h.
	* src/sphcontext.h: Add todo and warnings. Remove externs for
	SPHContextAlloc, SPHContextFree, SPHContextNearAlloc,
	SPHContextNearDealloc.
	* src/sphcontextpriv.h: New file.
	* src/sphlfentry.h: Add warnings and notes.
	* src/sphlflogentry.h: Add todos and notes.
	* src/sphlflogger.h: Add warnings and notes.
	* src/sphsinglepcqueue.h: Add warnings and todos.
	* src/sphtimer.h: Change note to warning.
	* src/tests/sasindex_t.c: Replace sasindex.h with sasindexpriv.h.
	* src/tests/sasstringbtree_t.c: Replace sasstringbtree.h with
	sasstringbtreepriv.h.
	* src/tests/sphcontext_t.c (sassim_dump_block): Remove.
	Replace sasstringbtree.h with sasstringbtreepriv.h.
	* src/tests/sphlflogger_t.c: Fix format error.

2012-04-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* src/sasstname.c: Indentation and remove compiler warnings.
	* src/sphsinglepcqueue.cpp: Likewise.
	* src/sasindexkey.h: Likewise.
	* src/sphlockfreeheap.cpp: Likewise.
	* src/bitv.c: Likewise.
	* src/sphlflogger.cpp: Likewise.
	* src/sasshm.c: Likewise.
	* src/sassim.cpp: Likewise.
	* src/sassimplespace.cpp: Likewise.